--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1ec744d890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f66dd0c3110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ec73fbf50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ec7423190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f66dd3a0190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f66dd3a0390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ec79c2890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ec79c2a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f66dd94da90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f66dd94dc90&gt;]</pre>
 </div>
 
 </div>
