--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb7df069f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f272a04b650&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7ded1dfd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb7ded4f210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f272a30bfd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f272a32a250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7df2eb950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb7df2ebb50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f272a8d5950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f272a90b790&gt;]</pre>
 </div>
 
 </div>
