--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fafee631d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd8d745c890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fafee30b310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fafee30b510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8d7741310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd8d7741510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fafee8beb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fafee8bed90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8d7cf1c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd8d7cf1e10&gt;]</pre>
 </div>
 
 </div>
