--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f97e3273dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2246c27c50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f97e3567450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f97e3567650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2246f13110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2246f13310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f97e3b07d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f97e3b07f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f22474bfad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f22474bfcd0&gt;]</pre>
 </div>
 
 </div>
