--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f16fba7d910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff221864e90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f16fba3e290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f16fba3e490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff22154b090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff22154b290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f16fbfdab50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f16fbfdad50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff221ae09d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff221ae0bd0&gt;]</pre>
 </div>
 
 </div>
