--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f502b9a89d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f64c3f2f950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f502bc890d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f502bc892d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f64c41f8290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f64c41f8490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f502c23b9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f502c23bbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f64c47a7b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f64c47a7d90&gt;]</pre>
 </div>
 
 </div>
