--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f14a4970950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff310aa7950&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f14a4f23290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f14a4f23490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff310d941d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff310d943d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f14a54d2bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f14a54d2dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff311342ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff311342cd0&gt;]</pre>
 </div>
 
 </div>
