--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5360798610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faef65d9e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5360ab88d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f536074c150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faef658f210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faef658f410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5360d43290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5360cf9a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faef6b3bb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faef6b3bd10&gt;]</pre>
 </div>
 
 </div>
