--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0cfea16210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa5ddba9a10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0cfefd30d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0cfefd32d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5dde97050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa5dde97250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0cff57fa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0cff57fc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5de434990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa5de434b90&gt;]</pre>
 </div>
 
 </div>
