--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa5ddba9a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f22053de850&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5dde97050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa5dde97250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f220598f110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f22059a4310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5de434990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa5de434b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2205f35810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2205f41d10&gt;]</pre>
 </div>
 
 </div>
