--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f22053de850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f08e5347c90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f220598f110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22059a4310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f08e5934150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f08e5934350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2205f35810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2205f41d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f08e5ed8a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f08e5ed8c90&gt;]</pre>
 </div>
 
 </div>
