--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f08e5347c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee838c0b50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f08e5934150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f08e5934350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fee835a4250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fee835a4410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f08e5ed8a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f08e5ed8c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fee83b52b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fee83b52d50&gt;]</pre>
 </div>
 
 </div>
