--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff86684e450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe3de746a90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8667eae90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff866818050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3ded9d4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe3dea44610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff866db07d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff866db0950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3df03b2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe3defe5e90&gt;]</pre>
 </div>
 
 </div>
