--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4853482c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5792db8f90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f48531c5990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f48531855d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5792aaa0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5792aaa2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4853782750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f485372bed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5793048990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5793048b90&gt;]</pre>
 </div>
 
 </div>
