--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6884fc0690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fad169fded0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6884c9f110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6884c9f310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fad166d6090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fad166d6290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f688524bad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f688524bcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fad16c8b9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fad16c8bbd0&gt;]</pre>
 </div>
 
 </div>
