--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb96379e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f833c408550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb96051390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb96051590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f833c0d7210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f833c0d7410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb96639bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb965f0e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f833c685b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f833c685d90&gt;]</pre>
 </div>
 
 </div>
