--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f833c408550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0fb1196b10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f833c0d7210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f833c0d7410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0fb0e59110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0fb0e59310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f833c685b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f833c685d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0fb140aa10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0fb140ac10&gt;]</pre>
 </div>
 
 </div>
