--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0fb1196b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f62eacf5310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0fb0e59110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0fb0e59310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f62eb29b150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f62eb29b350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0fb140aa10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0fb140ac10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f62eb84aa90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f62eb84ac90&gt;]</pre>
 </div>
 
 </div>
