--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9b434f1850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb4472f3d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b434a1210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9b434a1410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb44420050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcb44420250&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b43a53b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9b43a53d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb449bb990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcb449bbb90&gt;]</pre>
 </div>
 
 </div>
