--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7d803d4c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f374f017c50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d806def50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7d8037d290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f374f2f0890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f374f2ed3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d80973350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7d80928b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f374f90e1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f374f8a1cd0&gt;]</pre>
 </div>
 
 </div>
