--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff8cf86b9d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4da3a6e610&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8cf1e6050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff8cf1e6250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4da3d70dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4da40b1810&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8cf791990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff8cf791b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4da4355f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4da4309b50&gt;]</pre>
 </div>
 
 </div>
