--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f47da850190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa0bf777750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f47dab24190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f47dab24390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0bf448310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa0bf448510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f47db0d7ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f47db0d7cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0bf9f4bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa0bf9f4dd0&gt;]</pre>
 </div>
 
 </div>
