--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f778b9fcc50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb85e29ec50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f778b352f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f778b36f1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb85e26e050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb85e26e290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f778b91a9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f778b91abd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb85e80a990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb85e80abd0&gt;]</pre>
 </div>
 
 </div>
