--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f679bde67d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0c60a8dbd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f679bd9bf50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f679bda7250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0c60d731d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0c60d733d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f679c337850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f679c341b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0c61327a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0c61327c90&gt;]</pre>
 </div>
 
 </div>
