--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe01c313990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb21b7d090&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe01bff30d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe01bff32d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb22138190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb221383d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe01c58e9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe01c58ebd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb226e8ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb226e8d10&gt;]</pre>
 </div>
 
 </div>
