--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f71f5c8a390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1325bd65d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71f6272250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71f6272450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1325be2ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1325c15110&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71f6811bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71f6811dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f13261b2810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f13261b2a10&gt;]</pre>
 </div>
 
 </div>
