--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fed255b9c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4220559510&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fed25295590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fed252b7250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4220222190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4220222390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fed258caf50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fed25863c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42207cfad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42207cfcd0&gt;]</pre>
 </div>
 
 </div>
