--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f269dae7910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f53f2f85c90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f269d82e110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f269d82e310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f53f359df90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f53f3569590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f269ddc9990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f269ddc9b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f53f3b3b190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f53f3b0be10&gt;]</pre>
 </div>
 
 </div>
