--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc092c2b790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f930c932210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc092f1b150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc092f1b350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f930cc17090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f930cc17290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0934be990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc0934beb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f930d1b4910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f930d1b4b10&gt;]</pre>
 </div>
 
 </div>
