--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff07630f910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9e50a34550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff0765f3090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff0765f3290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e50d48050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9e50a02290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff076bb4a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff076bb4c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e50fdab90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9e50f9ebd0&gt;]</pre>
 </div>
 
 </div>
