--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9e50a34550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f73d6fa0890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e50d48050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9e50a02290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f73d754b290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f73d754b490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e50fdab90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9e50f9ebd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f73d7afab50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f73d7afad50&gt;]</pre>
 </div>
 
 </div>
