--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f19f3832050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f620c037310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19f3aec090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19f3b05350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f620c31b210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f620c31b410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19f40ae990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19f40bac50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f620c8c7b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f620c8c7d50&gt;]</pre>
 </div>
 
 </div>
