--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7caf2ca850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3fb4e72f90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7caef6e310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7caef99450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3fb4b48110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3fb4b48350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7caf531c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7caf53bd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3fb50f3950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3fb50f3b90&gt;]</pre>
 </div>
 
 </div>
