--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f19b8ed6d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdd5e216a50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19b8bac150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19b8bac350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd5e5093d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdd5e5095d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19b915fa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19b915fc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd5eab9d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdd5eab9f10&gt;]</pre>
 </div>
 
 </div>
