--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faecd2d4e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fce544e1210&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faecd5c7210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faecd5c7410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce547d52d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce547d54d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faecdb60b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faecdb60d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce54d72b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce54d72d90&gt;]</pre>
 </div>
 
 </div>
