--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff7b64058d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fecbabd6790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7b60ea210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff7b60ea410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fecba8bc1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fecba8bc410&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7b66c4690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff7b6686d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fecbae59b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fecbae59d50&gt;]</pre>
 </div>
 
 </div>
