--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1d8d468f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc2aebc99d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d8d755210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1d8d755410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc2af20a4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc2aeeb4350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d8dd05b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1d8dd05d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc2af48d650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc2af451c90&gt;]</pre>
 </div>
 
 </div>
