--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffa1dbbc090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8040577b50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa1db5bfd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffa1db8b210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f804025a310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f804025a550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa1e1208d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffa1e120ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f80407f9c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f80407f9e50&gt;]</pre>
 </div>
 
 </div>
