--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f869ca93a90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f213bc51a90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f869c3eaf90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f869c3fc1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f213b9470d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f213b9472d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f869c9be850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f869c9bea50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f213bee29d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f213bee2bd0&gt;]</pre>
 </div>
 
 </div>
