--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8acfa5ce10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc7ff69c490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8acf759210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8acf770310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7ff675490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7ff675690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8acfd18ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8acfd22bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7ffc24d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7ffc24f10&gt;]</pre>
 </div>
 
 </div>
