--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc7ff69c490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7542e32b50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7ff675490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc7ff675690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7542ded250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7542ded450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7ffc24d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc7ffc24f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f754339dbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f754339ddd0&gt;]</pre>
 </div>
 
 </div>
